--- a/.circleci/.config.yml
+++ b/.circleci/.config.yml
@@ -37,6 +37,6 @@ jobs:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
-      # run tests!
-      - run: mvn test
+      - run: mvn clean test
+      - run: mvn clean deploy -DskipTests
 
