adaugat:  docker  frontend  liquibase  modelul Ride

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,10 @@
 {
-    "name": "angularSeedApp",
+    "name": "trambooline",
     "version": "0.0.0",
-    "dependencies": {},
+    "dependencies": {
+        "gulp-uglify": "^1.2.0",
+        "pump": "^2.0.0"
+    },
     "scripts": {
         "test": "gulp test"
     },
@@ -36,6 +39,7 @@
         "gulp-uglify": "~1.2.0",
         "gulp-useref": "~1.2.0",
         "gulp-util": "~3.0.5",
+        "gulp-template": "^4.0.0",
         "http-proxy-middleware": "~0.0.5",
         "istanbul": "^0.3.15",
         "jshint-stylish": "~2.0.0",
@@ -53,6 +57,6 @@
         "wrench": "~1.5.8"
     },
     "engines": {
-        "node": ">=0.10.0"
+        "node": "6.11.4"
     }
 }
