--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <liqdb.schema>public</liqdb.schema>
+        <liquibase.context>schema</liquibase.context>
+        <liquibase.version>3.4.1</liquibase.version>
+        <liquibase.maven.plugin.version>${liquibase.version}</liquibase.maven.plugin.version>
     </properties>
 
     <dependencies>
@@ -71,15 +75,28 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -92,6 +109,19 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>${liquibase.maven.plugin.version}</version>
+                <configuration>
+                    <propertyFile>src/main/resources/liquibase.properties</propertyFile>
+                    <changeLogFile>src/main/resources/database/changelog.xml</changeLogFile>
+                    <defaultSchemaName>${liqdb.schema}</defaultSchemaName>
+                    <contexts>${liquibase.context}</contexts>
+                    <propertyFileWillOverride>false</propertyFileWillOverride>
+                </configuration>
             </plugin>
         </plugins>
     </build>
