--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -1,29 +1,49 @@
 {
-    "name": "angularSeedApp",
+    "name": "trambooline",
     "version": "0.0.0",
     "dependencies": {
-        "angular-animate": "~1.4.0",
-        "angular-cookies": "~1.4.0",
-        "angular-touch": "~1.4.0",
-        "angular-sanitize": "~1.4.0",
+        "angular": "~1.6.6",
+        "angular-loader": "~1.6.6",
+        "angular-mocks": "~1.6.6",
+        "html5-boilerplate": "^5.3.0",
+        "angular-aria": "~1.6.6",
+        "angular-animate": "~1.6.6",
+        "angular-messages": "~1.6.6",
+        "angular-sanitize": "~1.6.6",
+        "angular-material": "^1.1.4",
+        "angular-moment": "^1.0.1",
+        "angular-avatar": "^1.3.0",
+        "simple-line-icons": "^2.3.2",
+        "font-awesome": "fontawesome#^4.6.3",
+        "moment": "2.22.1",
+        "angular-cookies": "~1.6.6",
         "jquery": "~2.1.4",
-        "angular-resource": "~1.4.0",
-        "angular-ui-router": "~0.2.15",
+        "angular-resource": "^1.6.7",
         "bootstrap-sass-official": "~3.3.4",
-        "angular-bootstrap": "~0.13.0",
         "malarkey": "yuanqing/malarkey#~1.3.0",
         "toastr": "~2.1.1",
-        "moment": "~2.10.3",
         "animate.css": "~3.3.0",
-        "angular": "~1.4.0",
         "fontawesome": "~4.3.0",
-        "angular-markdown-filter": "~1.2.0"
+        "angular-markdown-filter": "~1.2.0",
+        "angular-spring-data-rest": "^0.4.6",
+        "ngstorage": "^0.3.11",
+        "ng-lodash": "^0.5.0",
+        "angular-loading-bar": "^0.9.0",
+        "angular-translate": "^2.16.0",
+        "sprintf": "^1.1.1",
+        "material-design-icons": "^3.0.1",
+        "ng-scrollbars": "^0.0.11",
+        "md-pickers": "^1.1.1",
+        "lf-ng-md-file-input": "^1.5.3",
+        "angular-ui-router": "^1.0.15"
     },
     "devDependencies": {
         "angular-mocks": "~1.4.0"
     },
     "resolutions": {
         "jquery": "~2.1.4",
-        "angular": "~1.4.0"
+        "angular": "1.6.10",
+        "angular-resource": "^1.6.7",
+        "moment": "2.22.1"
     }
 }
